fixed some css on document show - tags section overflow scroll

--- a/app/assets/stylesheets/components/_tag.scss
+++ b/app/assets/stylesheets/components/_tag.scss
@@ -27,6 +27,11 @@
   opacity: 0.8
 }
 
+.existing-tags {
+  overflow: scroll;
+  max-height: 170px;
+}
+
 .add-tags {
   clear: both;
   padding-top: 20px;
@@ -39,7 +44,7 @@
 }
 .other-tags {
   overflow: scroll;
-  max-height: 300px;
+  max-height: 200px;
 }
 
 .title .form-control {
